# fandoantion-on-NEAR

./: .env.example  README.md  next.config.mjs  package-lock.json  package.json
near-contract/: Cargo.toml
near-contract/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/ipfs/upload/: route.ts
src/app/creator/: page.tsx
src/app/creator/[accountId]/: page.tsx
src/app/dashboard/: page.tsx
src/app/mint/: page.tsx
src/components/: BottomNav.tsx  CreatorCard.tsx  Hero.tsx  Navbar.tsx  NftCard.tsx
src/constants/: index.ts
src/lib/: ipfs.ts  near.ts
