[package]
name = "fandonation-near"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "1.5.7"
near-sdk = { version = "5.24.1", features = ["legacy"] }

[dev-dependencies]
near-sdk = { version = "5.24.1", features = ["legacy", "unit-testing"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = true
